--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "1.2.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
+    "anychart-react": "^1.4.1",
     "bootstrap": "4.5.0",
-    "chart.js": "2.9.3",
+    "chart.js": "^2.9.3",
     "history": "4.10.1",
     "node-sass": "4.14.1",
     "perfect-scrollbar": "1.5.0",
-    "react": "16.13.1",
-    "react-chartjs-2": "2.9.0",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
+    "react-dom": "^16.13.1",
     "react-google-maps": "9.4.5",
     "react-icons": "^4.2.0",
     "react-notification-alert": "0.0.12",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "8.4.1"
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
