--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.2.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "bootstrap": "4.5.0",
     "chart.js": "2.9.3",
+    "dateformat": "^4.5.1",
     "history": "4.10.1",
     "node-sass": "4.14.1",
     "perfect-scrollbar": "1.5.0",
@@ -17,7 +20,8 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "8.4.1"
+    "reactstrap": "8.4.1",
+    "unirest": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
