--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "anychart-react": "^1.4.1",
     "bootstrap": "4.5.0",
     "chart.js": "^2.9.3",
+    "dateformat": "^4.5.1",
     "history": "4.10.1",
     "node-sass": "4.14.1",
     "perfect-scrollbar": "1.5.0",
@@ -21,7 +22,8 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "unirest": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
