--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "TennisTourCol",
   "version": "1.2.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.11",
+    "node": "14.15.5"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
