--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.2.0",
   "private": true,
   "engines": {
-    "npm": "6.14.11",
-    "node": "14.15.5"
+    "npm": "6.x",
+    "node": "14.x"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -29,9 +29,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "compile-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css",
+    "minify-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.min.css --output-style compressed",
+    "map-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css --source-map true"
   },
   "eslintConfig": {
     "extends": "react-app"
