--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@googlemaps/js-api-loader": "^1.11.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "bootstrap": "4.5.0",
+    "bootstrap": "^4.5.0",
     "chart.js": "2.9.3",
     "dateformat": "^4.5.1",
     "google-map-react": "^2.1.9",
@@ -19,6 +19,7 @@
     "perfect-scrollbar": "1.5.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-bootstrap": "^1.5.0",
     "react-chartjs-2": "2.9.0",
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
