--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@googlemaps/js-api-loader": "^1.11.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
+    "@stripe/react-stripe-js": "^1.3.0",
+    "@stripe/stripe-js": "^1.13.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chart.js": "2.9.3",
     "date-fns": "^2.18.0",
